--- a/Extract-data-from-photo.html
+++ b/Extract-data-from-photo.html
@@ -14,6 +14,11 @@
 			<form enctype="multipart/form-data" method="POST" name="formS3ObjManager" id="formS3ObjManagerId">
                 <input type="file" name="file" required />
             </form>
+            
+            <div id='loader' style='display: none;width:69px;height:89px;border:1px solid black;position:absolute;top:50%;left:50%;padding:2px;'>
+              <img src='Spinner.gif' width='50px' height='50px'>
+            </div>
+
             <button class="UrlSignerBtn" id='ObjectUploadBtnId'><span>Upload File </span></button>
             <button class="UrlSignerBtn" id="test" style='display:none;'><span>GET</span></button>
 		</div>
@@ -33,6 +38,7 @@
 
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 <script>
 	$(document).ready(function() {
 		$("#test").click(function() {
@@ -93,7 +99,6 @@
                     "FileName": $('#FileNameId').val()
                 }, ),
                 dataType: "json",
-                //beforeSend: function(){ $( '#loader' ).show();},
                 success: function(res) {
                     uploadFile(res, res.url);
                 },
@@ -101,9 +106,6 @@
                     $("#urlTextId").html("Failed: Unable to Get Signed Upload Url" + " " + e.responseText);
                     $("#SignedUrlId").html("");
                 },
-                complete: function() {
-                    $('#loader').hide();
-                }
             });
         });
     });
